# csl

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-12-csl-design.md
openspec/changes/csl-rust-statusline/: design.md  proposal.md  tasks.md
openspec/changes/csl-rust-statusline/specs/cli-management/: spec.md
openspec/changes/csl-rust-statusline/specs/git-info/: spec.md
openspec/changes/csl-rust-statusline/specs/statusline-output/: spec.md
openspec/changes/csl-rust-statusline/specs/usage-fetching/: spec.md
scripts/: install.sh
src/: cli.rs  config.rs  config_cmd.rs  context.rs  display.rs  format.rs  git.rs  install.rs  main.rs  statusline.rs  usage.rs
