[package]
name = "csl"
version = "0.1.0"
edition = "2024"
description = "A fast, single-binary statusline for Claude Code"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
gix = { version = "0.72", default-features = false, features = ["index", "worktree-stream"] }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
