[package]
name = "claude-status"
version = "0.1.0"
edition = "2024"
description = "A rich status line for Claude Code showing model info, context usage, and rate limits"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
