[package]
name = "claude-status"
version = "0.1.0"
edition = "2024"
description = "A rich status line for Claude Code showing model info, context usage, and rate limits"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
ureq = "3"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
